# SecureP2P

./: .gitignore  CMakeLists.txt  README.md  setup.sh
.github/workflows/: release.yml
include/: client.hpp  common.hpp  crypto.hpp  network.hpp  protocol.hpp  secure_memory.hpp  server.hpp
src/: client.cpp  crypto.cpp  main.cpp  network.cpp  server.cpp
tests/: test_main.cpp
